// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`accepts ref 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <span
    class="textRecipe_size_medium"
  >
    text
  </span>
</div>
`;

exports[`renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <span
    class="textRecipe_size_medium"
  >
    text
  </span>
</div>
`;

exports[`renders color 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <span
    class="textRecipe_size_medium"
    style="color: rgb(235, 0, 0);"
  />
</div>
`;

exports[`renders margin 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <span
    class="textRecipe_size_medium"
    style="margin: 12px;"
  />
  <span
    class="textRecipe_size_medium"
    style="margin: 24px;"
  />
  <span
    class="textRecipe_size_medium"
    style="margin: 48px;"
  />
  <span
    class="textRecipe_size_medium"
    style="margin: 0px;"
  />
  <span
    class="textRecipe_size_medium"
    style="margin-top: 12px; margin-bottom: 12px;"
  />
  <span
    class="textRecipe_size_medium"
    style="margin-left: 12px; margin-right: 12px;"
  />
  <span
    class="textRecipe_size_medium"
    style="margin-bottom: 12px;"
  />
  <span
    class="textRecipe_size_medium"
    style="margin-top: 12px;"
  />
  <span
    class="textRecipe_size_medium"
    style="margin-left: 12px;"
  />
  <span
    class="textRecipe_size_medium"
    style="margin-right: 12px;"
  />
</div>
`;

exports[`renders outside grommet wrapper 1`] = `
<span
  class="textRecipe_size_medium"
>
  text
</span>
`;

exports[`renders size 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <span
    class="textRecipe_size_xsmall"
  />
  <span
    class="textRecipe_size_small"
  />
  <span
    class="textRecipe_size_medium"
  />
  <span
    class="textRecipe_size_large"
  />
  <span
    class="textRecipe_size_xlarge"
  />
  <span
    class="textRecipe_size_xxlarge"
  />
  <span
    class="textRecipe_size_2xl"
  />
  <span
    class="textRecipe_size_3xl"
  />
  <span
    class="textRecipe_size_4xl"
  />
  <span
    class="textRecipe_size_5xl"
  />
  <span
    class="textRecipe_size_6xl"
  />
</div>
`;

exports[`renders tag 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="textRecipe_size_medium"
  />
</div>
`;

exports[`renders textAlign 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <span
    class="textRecipe_size_medium"
    style="text-align: left;"
  />
  <span
    class="textRecipe_size_medium"
    style="text-align: center;"
  />
  <span
    class="textRecipe_size_medium"
    style="text-align: right;"
  />
  <span
    class="textRecipe_size_medium"
    style="text-align: justify;"
  />
</div>
`;

exports[`renders tip 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  class="c0"
>
  <span
    aria-label="tooltip"
    class="textRecipe_size_medium"
  >
    Default Tip
  </span>
</div>
`;

exports[`renders truncate 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <span
    class="textRecipe_size_medium"
  >
    a b c d e f g h i j k l m n o p q r s t u v w x y z
  </span>
  <span
    class="textRecipe_size_medium_truncate_true"
  >
    a b c d e f g h i j k l m n o p q r s t u v w x y z
  </span>
</div>
`;

exports[`renders weight 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <span
    class="textRecipe_size_medium"
    style="font-weight: normal;"
  />
  <span
    class="textRecipe_size_medium"
    style="font-weight: bold;"
  />
</div>
`;

exports[`should apply a11yTitle or aria-label 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <span
    aria-label="test"
    class="textRecipe_size_medium"
  >
     Example
  </span>
  <span
    aria-label="test-2"
    class="textRecipe_size_medium"
  >
    Example
  </span>
</div>
`;

exports[`should have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <span
    aria-label="test"
    class="textRecipe_size_medium"
  >
     Example
  </span>
</div>
`;
